--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Aunts -- Juvenile fiction'
 - !lcsh 'Education -- Juvenile fiction'
+- GITenberg
 title: The End of a Coil
 url: http://www.gutenberg.org/ebooks/27618
